content/static: fix collapsed spacing in preformatted blocks
We have "word-spacing: -0.3em" for <code> in our CSS, but that causes
Markdown code blocks to have misaligned spacing. Markdown renders
blocks in <pre><code>, so this change updates the CSS to override the
word spacing back to zero for code blocks. (We use the goldmark
package, but other Markdown renderers produces <pre><code> too.)

Fixes golang/go#41507

Reviewed-on: https://go-review.googlesource.com/c/website/+/271277
Run-TryBot: Dmitri Shuralyov <dmitshur@golang.org>
TryBot-Result: Go Bot <gobot@golang.org>
Trust: Jay Conrod <jayconrod@google.com>

--- a/content/static/style.css
+++ b/content/static/style.css
@@ -98,6 +98,11 @@ code {
    * spaces tend to be wider than proportional font spaces. */
   word-spacing: -0.3em;
 }
+pre code {
+  /* Maintain spacing inside preformatted blocks rendered from Markdown.
+   * See golang.org/issue/41507. */
+  word-spacing: 0;
+}
 pre {
   line-height: 1.4;
   overflow-x: auto;
